--- a/css/main-page.css
+++ b/css/main-page.css
@@ -8,14 +8,16 @@
 }
 .box{
     width: 100%;
-    height: 200px;
     background:url(../img/topbackground.jpg) center top no-repeat;
     z-index: 1;
 }
-
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
 .nav{
     width: 100%;
-    height: 40px;
     background-color: rgba(255,255,255,0.5)
 }
 .nav-ul{
