--- a/css/main-page.css
+++ b/css/main-page.css
@@ -16,12 +16,16 @@
     display: table;
     clear: both;
 }
+.logoAll{
+    width: 1280px;
+    margin: 0 auto;
+}
 .nav{
     width: 100%;
     background-color: rgba(255,255,255,0.5)
 }
 .nav-ul{
-    width: 1400px;
+    width: 1280px;
     margin: 0 auto;
 }
 .nav-li1{
